# attest-tools

./: .gitignore  ChangeLog  Makefile.am  README.en.md  README.md  README.openEuler.en.md  configure.ac
etc/: attest_ra_server  attest_tls_server
include/: Makefile.am  conf.h  crypto.h  ctx.h  ctx_json.h  enroll_client.h  enroll_server.h  event_log.h  list.h  pcr.h  skae-asn.h  skae.h  tpm2-asn.h  tss.h  util.h  verifier.h
include/event_log/: bios.h  ima.h
libs/: Makefile.am  crypto.c  ctx.c  ctx_json.c  enroll_client.c  enroll_server.c  event_log.c  pcr.c  skae.c  tss.c  util.c  verifier.c
libs/event_log/: Makefile.am  bios.c  ima.c
req_examples/: Makefile.am  index.txt  req-bios-ima-sig.json  req-bios-ima.json  req-dummy.json
scripts/: Makefile.am  attest_certify.sh  ekcert_read.sh  generate_demoCA.sh  get_pgp_keys.sh
src/: Makefile.am  attest_build_json.c  attest_create_skae.c  attest_parse_json.c  attest_ra_client.c  attest_ra_server.c  attest_tls_client.c  attest_tls_common.c  attest_tls_common.h  attest_tls_server.c
systemd/: Makefile.am  attest_ra_server.service  attest_tls_server.service
verifiers/: Makefile.am  bios.c  dummy.c  evm_key.c  ima_boot_aggregate.c  ima_cp.c  ima_policy.c  ima_sig.c
