attest_tools_includedir=$(includedir)/attest-tools
attest_tools_include_HEADERS = list.h \
			       ctx_json.h \
			       skae.h \
			       util.h \
			       skae-asn.h \
			       event_log.h \
			       crypto.h \
			       verifier.h \
			       tss.h \
			       enroll_server.h \
			       enroll_client.h \
			       pcr.h \
			       event_log/bios.h \
			       event_log/ima.h \
			       ctx.h \
			       tpm2-asn.h
